<resources>
    <string name="app_name">Food Heaven</string>
    <string name="deliver_to">Deliver to</string>
    <string name="ny_downtown_no97">NY-downtown-no97</string>
    <string name="name">Name</string>
    <string name="g_settings">Settings</string>
    <string name="g_edit_personal_details">Edit personal details</string>
    <string name="g_orders">Orders</string>
    <string name="g_notifications">Notifications</string>
    <string name="g_regional">Regional</string>
    <string name="g_language">Language</string>
    <string name="help">Help</string>
    <string name="g_logout">Logout</string>
    <string name="g_english">English</string>
    <string name="g_arabic">عربي</string>
    <string name="customer_support">Customer Support</string>
    <string name="help_text">Have a Problem? Talk to us for the answer</string>
    <string name="chatbot_will_be_available_in_second_version_n_keep_updated">ChatBot will be available in our second version \n keep updated</string>
    <string name="default_web_client_id">608784426814-hq8g6966ebbpkiv8qqkglr98h3giqood.apps.googleusercontent.com</string>
    <string-array name="user_roles">
        <item>Customer</item>
        <item>Restaurant</item>
    </string-array>
    <string-array name="meal_categories">
        <item>Pizza</item>
        <item>Burger</item>
        <item>Chicken</item>
        <item>HotDog</item>
        <item>Sushi</item>
        <item>Meat</item>
        <item>Drink</item>
        <item>More</item>
    </string-array>
</resources>