<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressbar_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/g_hint"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_parnet"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintTop_toTopOf="parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_user"
                    android:layout_width="@dimen/_48sdp"
                    android:layout_height="@dimen/_48sdp"
                    android:background="@drawable/profile_img_background"
                    android:src="@drawable/user"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@+id/img_user"
                    app:layout_constraintStart_toEndOf="@+id/img_user"
                    app:layout_constraintTop_toTopOf="@+id/img_user">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_marginStart="@dimen/_6sdp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_user_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Name"
                            android:textStyle="bold"
                            android:textSize="@dimen/_14ssp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_edit_personal_details"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/g_edit_personal_details"
                            android:textSize="@dimen/_12ssp"
                            app:layout_constraintStart_toStartOf="@+id/tv_user_name"
                            app:layout_constraintTop_toBottomOf="@id/tv_user_name" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

                <ImageView
                    android:id="@+id/arrow"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:src="@drawable/ic_arrow"
                    app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/linearLayout"
                    app:tint="@color/g_icon_tint" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/tv_notifications"
                android:textSize="@dimen/_12ssp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/g_notifications"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/constraint_profile" />

            <LinearLayout
                android:id="@+id/linear_notifications"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/search_box_background"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/tv_notifications">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:paddingVertical="@dimen/_12sdp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_36sdp"
                        android:layout_height="@dimen/_36sdp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/settings_items_background"
                        android:backgroundTint="#4cd964"
                        android:src="@drawable/ic_notification"
                        app:tint="@color/white" />

                    <TextView
                        android:id="@+id/tv_notifications2"
                        style="@style/MediumTextViewThin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_weight="1"
                        android:text="@string/g_notifications"
                        android:textColor="@color/g_hint"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch_notification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:buttonTint="#4cd964"
                        android:checked="true" />

                </LinearLayout>
            </LinearLayout>


            <TextView
                android:id="@+id/tv_regional"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12ssp"
                android:layout_marginTop="20dp"
                android:text="@string/g_regional"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/linear_notifications" />

            <LinearLayout
                android:id="@+id/linear_regional"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingVertical="@dimen/_12sdp"
                android:paddingHorizontal="@dimen/_8sdp"
                android:background="@drawable/search_box_background"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="@id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/tv_regional">

                <LinearLayout
                    android:id="@+id/linear_language"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="@dimen/_4sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/lang_img"
                        android:layout_width="@dimen/_36sdp"
                        android:layout_height="@dimen/_36sdp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/settings_items_background"
                        android:backgroundTint="#5856d6"
                        android:src="@drawable/ic_language"
                        app:tint="@color/white" />

                    <TextView
                        android:id="@+id/dfgh"
                        style="@style/MediumTextViewThin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_weight="1"
                        android:text="@string/g_language"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_arrow"
                        app:tint="@color/g_icon_tint" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_help"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="@dimen/_4sdp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_36sdp"
                        android:layout_height="@dimen/_36sdp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/settings_items_background"
                        android:backgroundTint="#9C27B0"
                        android:src="@drawable/ic_help"
                        app:tint="@color/white" />

                    <TextView
                        android:id="@+id/tv_help"
                        style="@style/MediumTextViewThin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_weight="1"
                        android:text="@string/help"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_arrow"
                        app:tint="@color/g_icon_tint" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/linear_log_out"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="@dimen/_4sdp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_36sdp"
                        android:layout_height="@dimen/_36sdp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/settings_items_background"
                        android:backgroundTint="#ff5823"
                        android:src="@drawable/ic_logout"
                        app:tint="@color/white" />

                    <TextView
                        android:id="@+id/logout"
                        style="@style/MediumTextViewThin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_weight="1"
                        android:text="@string/g_logout"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_arrow"
                        app:tint="@color/g_icon_tint" />
                </LinearLayout>


            </LinearLayout>


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.04" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.96" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>